--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.4.1",
     "react-scroll-trigger": "^0.6.14",
+    "react-select": "^5.10.1",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
